# rwkvtune

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml
examples/: README.md  run_grpo_single_gpu.sh  run_sft_grpo_single_gpu.sh  run_sft_single_gpu.sh  run_test_generation.sh  test_generation.py  train_grpo_single_gpu.py  train_sft_single_gpu.py
examples/data/: sharegpt_sample_100.jsonl
rwkvtune/: __init__.py  outputs.py  sampling_params.py
rwkvtune/cli/: __init__.py  create_model_hub.py  merge_lora.py
rwkvtune/configs/: CONFIG_SYSTEM.md  README.md  USAGE_EXAMPLES.md  __init__.py  model_loader.py
rwkvtune/configs/chat_templates/: README.md  rwkv_default.jinja
rwkvtune/configs/models/: rwkv7-0.1b.json  rwkv7-0.4b.json  rwkv7-1.5b.json  rwkv7-13.3b.json  rwkv7-2.9b.json  rwkv7-7.2b.json
rwkvtune/data/: __init__.py  chat_formatter.py
rwkvtune/data/tokenizers/: __init__.py  auto_tokenizer.py  chatml_utils.py  rwkv_tokenizer.py  special_token_handler.py
rwkvtune/inference/: README.md  __init__.py  batch_generator.py  core.py  generator.py  grpo_batch_generator.py  pipeline.py  scheduler_core.py  state_cache.py  structured_output.py
rwkvtune/models/: __init__.py  auto_model.py  configuration.py  generation_mixin.py
rwkvtune/models/rwkv7/: __init__.py  config.py  infctx_module.py  model.py  model_infctx.py
rwkvtune/models/rwkv7/operators/: __init__.py  wkv_cpu.py  wkv_cuda.py  wkv_infctx.py  wkv_infctx_naive.py  wkv_loader.py
rwkvtune/models/rwkv7/operators/cuda/: __init__.py  build.py  wkv7_cuda.cu  wkv7_infctx_cuda.cu  wkv7_infctx_op.cpp  wkv7s.cu  wkv7s_op.cpp
rwkvtune/peft/: __init__.py  config.py  peft_model.py
rwkvtune/peft/lora/: __init__.py  layer.py
rwkvtune/training/: __init__.py  callbacks.py  grpo_config.py  grpo_trainer.py  lightning_module.py  lightning_module_infctx.py  model_save_utils.py  pretrain_config.py  pretrain_trainer.py  sft_config.py  sft_trainer.py
rwkvtune/training/grpo/: README.md  __init__.py  advantage.py  dataset.py  lightning_module.py  loss.py  utils.py
rwkvtune/utils/: __init__.py  model_hub.py
