[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rwkvtune"
version = "0.1.0"
description = "RWKV Model Training Toolkit - Pretrain, SFT, and GRPO Training for RWKV Models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "RWKV-Tune Contributors"}
]
keywords = [
    "rwkv", 
    "deep-learning", 
    "language-model", 
    "training", 
    "fine-tuning",
    "sft",
    "grpo",
    "rlhf",
    "lora",
    "peft"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "numpy>=1.20.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
deepspeed = [
    "deepspeed>=0.10.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "deepspeed>=0.10.0",
]

[project.scripts]
rwkvtune-merge-lora = "rwkvtune.cli.merge_lora:main"
rwkvtune-create-hub = "rwkvtune.cli.create_model_hub:main"

[project.urls]
Homepage = "https://github.com/rwkv-community/rwkvtune"
Repository = "https://github.com/rwkv-community/rwkvtune"
Documentation = "https://github.com/rwkv-community/rwkvtune#readme"
"Bug Tracker" = "https://github.com/rwkv-community/rwkvtune/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rwkvtune*"]
exclude = ["tests*", "examples*", "docs*", "scripts*"]

[tool.setuptools.package-data]
rwkvtune = [
    "data/tokenizers/vocab/*.txt",
    "models/rwkv7/operators/cuda/*.cu",
    "models/rwkv7/operators/cuda/*.cpp",
    "configs/models/*.json",
    "py.typed",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["rwkvtune"]
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests",
    "examples",
    "docs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "infctx: Infinite context training tests",
    "mixed_precision: Mixed precision tests",
    "cuda: Tests requiring CUDA",
    "slow: Slow running tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["rwkvtune"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
